fixing <p> spacing and wrap

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,12 @@ h1 {
 }
 p {
     font-size: 1em;
-    text-align: left;
+    padding-top: 5px;
+    padding-bottom: 10px;
+
+    box-sizing: border-box; 
+    text-align: center;
+
 }
 
 /* Style for input fields */
